syntax = "proto3";

package com.sofka.ToDo.security;

service SecurityService {
  rpc Register(CreateUserCommand) returns (CreatedOrUpdatedUserResponse);
  rpc Login(SignInCommand) returns (SignedInResponse);
}

message SignInCommand {
  string email = 1;
  string password = 2;
}

message SignedInResponse {
  string message = 1;
  string token = 2;
}

message CreateUserCommand {
  string userId = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message CreatedOrUpdatedUserResponse {
  string message = 1;
  User user = 2;
}

message User {
  string userId = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  bool status = 5;
  Role role = 6;
}

message Role {
  string roleId = 1;
  string name = 2;
  optional string description = 3;
  bool status = 4;
}
